--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -72,6 +72,11 @@
             "system-parameter": {
                 "header": "System-parameter"
             }
+        },
+        "admin": {
+            "user": "User",
+            "manage-user": "Manage user",
+            "manage-doctor": "Manage doctor"
         }
     },
     "system": {
