--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -72,6 +72,11 @@
             "system-parameter": {
                 "header": "Tham số hệ thống"
             }
+        },
+        "admin": {
+            "user": "Người dùng",
+            "manage-user": "Quản lí người dùng",
+            "manage-doctor": "Quản lí bác sĩ"
         }
     },
     "system": {
