--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -12,7 +12,7 @@
         "chooseGoodDoctor": "Chọn bác sĩ giỏi",
         "examinationPackage": "Gói khám",
         "generalHealthCheck": "Khám sức khoẻ tổng quát",
-        "medicalBackground": "NỀN TẢNG Y TẾ",
+        "medicalBackground": " HỆ THỐNG ĐẶT LỊCH KHÁM BỆNH",
         "comprehensiveHealthCare": "CHĂM SÓC SỨC KHỎE TOÀN DIỆN",
         "findMedicalSpecialist": "Tìm chuyên khoa khám bệnh",
         "specialistExamination": "Khám chuyên khoa",
